Data Engineer Project

--- a/Great_Expectation.ipynb
+++ b/Great_Expectation.ipynb
@@ -11,9 +11,11 @@
         "\n",
         "Data Validation - Great Expectations\n",
         "\n",
-        "Name: Ahmad Naufal Budianto\n",
+        "Created By: Ahmad Naufal Budianto\n",
         "\n",
-        "Program ini dibuat untuk melakukan validasi data dengan berbagai kondisi atas dataset hasil survey kepuasan pelanggan Amazon (June 2023) yang telah dibersihkan.\n",
+        "This program is created to validate data with various conditions on the cleaned dataset of Amazon customer satisfaction survey (June 2023).\n",
+        "\n",
+        "This program run in Google Collab.\n",
         "\n",
         "======================================\n",
         "\n",
@@ -53,7 +55,7 @@
         }
       ],
       "source": [
-        "# Melakukan instalasi modul great expectations\n",
+        "# Great expectations installation.\n",
         "!pip install -q great_expectations"
       ]
     },
@@ -533,7 +535,7 @@
         "filepath = 'P2M3_naufal_data_clean.csv'\n",
         "df = pd.read_csv(filepath)\n",
         "\n",
-        "# Menambah kolom unik.\n",
+        "# Add unique column.\n",
         "df[\"timestamp_gender\"] = df[\"timestamp\"].astype(str) + '_' + df[\"gender\"].astype(str)\n",
         "df.head()"
       ]
@@ -546,7 +548,7 @@
       },
       "outputs": [],
       "source": [
-        "filepath = 'new_P2M3_naufal_data_clean.csv'\n",
+        "filepath = 'data_clean.csv'\n",
         "df.to_csv(filepath, index=False)"
       ]
     },
@@ -567,10 +569,10 @@
       },
       "outputs": [],
       "source": [
-        "# Melakukan import library.\n",
+        "# Import library.\n",
         "from great_expectations.data_context import FileDataContext\n",
         "\n",
-        "# Membuat data context di direktori.\n",
+        "# Creating a data context in the directory.\n",
         "context = FileDataContext.create(project_root_dir='./')"
       ]
     },
@@ -593,7 +595,7 @@
       "source": [
         "datasource = context.sources.add_pandas(\"dataclean\")\n",
         "\n",
-        "# Melakukan koneksi dengan path csv yang ingin divalidasi.\n",
+        "# Connecting to the CSV path to be validated.\n",
         "asset = datasource.add_csv_asset(\"asset\", filepath_or_buffer=filepath)\n",
         "\n",
         "batch = asset.build_batch_request()"
@@ -1104,16 +1106,15 @@
         }
       ],
       "source": [
-        "# Membuat expectation suite.\n",
+        "# Expectation suite.\n",
         "expectation_suite_name = 'expectation-survey-amazon'\n",
         "context.add_or_update_expectation_suite(expectation_suite_name)\n",
         "\n",
-        "# Membuat validator menggunakan expectation suite di atas.\n",
+        "# Create validator.\n",
         "validator = context.get_validator(\n",
         "    batch_request = batch,\n",
         "    expectation_suite_name = expectation_suite_name)\n",
         "\n",
-        "# Melakukan cek validator konten.\n",
         "validator.head()"
       ]
     },
@@ -1132,8 +1133,7 @@
         "id": "msiCO1b51-J1"
       },
       "source": [
-        "Pada tahap ini saya akan menentukan beberapa parameter ekspetasi:\n",
-        "\n",
+        "At this stage, I will determine several expectation parameters:\n",
         "\n",
         "* to be unique\n",
         "* to be between min_value and max_value\n",
@@ -1141,8 +1141,7 @@
         "* to be in type list\n",
         "* median to be between\n",
         "* table row count\n",
-        "* to match regex\n",
-        "\n"
+        "* to match regex"
       ]
     },
     {
@@ -1151,7 +1150,7 @@
         "id": "6vs0h3Eb3zq4"
       },
       "source": [
-        "### Expectation 1: Value pada kolom `timestamp_gender` haruslah unik."
+        "### Expectation 1: Values in the `timestamp_gender` column must be unique."
       ]
     },
     {
@@ -1246,19 +1245,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "HWTi8VwD5DvS"
-      },
-      "source": [
-        "Terdapat 2 nilai pada kolom `timestamp` yang memiliki nilai yang sama."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "olYcguKc389C"
       },
       "source": [
-        "### Expectation 2: Nilai pada kolom `shopping_satisfaction` haruslah di antara `1` dan `5`."
+        "### Expectation 2: Values in the `shopping_satisfaction` column must be between `1` and `5`."
       ]
     },
     {
@@ -1358,7 +1348,7 @@
         "id": "wsuYA8JA4hh5"
       },
       "source": [
-        "### Expectation 3: To be in set, nilai `Female`, `Male`, `Others`, dan `Prefer not to say` harus ada pada kolom `gender`."
+        "### Expectation 3: To be in set, values `Female`, `Male`, `Others`, and `Prefer not to say` must exist in the `gender` column."
       ]
     },
     {
@@ -1459,19 +1449,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5h8Jt9jg6oOF"
-      },
-      "source": [
-        "Terdapat `108` value pada kolom `gender` yang tidak bernilai `Male` dan `Female`."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "wuwvwD2963Iy"
       },
       "source": [
-        "### Expectation 4: Bahwa tipe data pada kolom `age` haruslah `integer`."
+        "### Expectation 4: The data type in the `age` column must be `integer`."
       ]
     },
     {
@@ -1563,7 +1544,7 @@
         "id": "38MrzkE27gDf"
       },
       "source": [
-        "### Expectations 5: Nilai median pada kolom `shopping_satisfaction` bernilai maksimal `2` dan minimal `1`."
+        "### Expectation 5: The median value in the `shopping_satisfaction` column should be between `1` and `2`, inclusive."
       ]
     },
     {
@@ -1660,7 +1641,7 @@
         "id": "hnDkCpCJ85Dg"
       },
       "source": [
-        "### Expectation 6: Jumlah maksimal baris adalah `600` (sesuai dengan jumlah baris dataset clean)."
+        "### Expectation 6: The maximum number of rows should be `600` (matching the number of rows in the clean dataset)."
       ]
     },
     {
@@ -1751,7 +1732,7 @@
         "id": "A-KWgPN29O6R"
       },
       "source": [
-        "### Expectation 7: Kolom `purchase_categories` hanya memiliki value-value yang bersifat string (non-numerikal)."
+        "### Expectation 7: The `purchase_categories` column should only have string (non-numeric) values."
       ]
     },
     {
@@ -1844,7 +1825,7 @@
         "id": "GxipXFJf-i1C"
       },
       "source": [
-        "### Melakukan save expectation suite."
+        "### Save the expectation suite."
       ]
     },
     {
@@ -1853,7 +1834,7 @@
         "id": "tckZbwhYAF2v"
       },
       "source": [
-        "Semua hasil great expectations memiliki nilai validasi `success = true`."
+        "All Great Expectations results should have a validation value of `success = true`."
       ]
     },
     {
